Updated the rotational system templates

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,13 +19,13 @@ include_directories(include)
 #add_executable(integrators main.cpp)
 #add_executable(particle_dynamics test/particle_dynamics.cpp test/write_vtk.cpp test/compute_energy.cpp)
 #add_executable(system_test test/system_test.cpp test/write_vtk.cpp test/compute_energy.cpp)
-#add_executable(rotational_system_test test/rotational_system_test.cpp test/write_vtk.cpp test/compute_energy.cpp)
+add_executable(rotational_system_test test/rotational_system_test.cpp test/write_vtk.cpp test/compute_energy.cpp)
 add_executable(oscillator_test test/oscillator.cpp)
 add_executable(particle_dynamics_test test/particle_dynamics.cpp test/write_vtk.cpp test/compute_energy.cpp)
 
 #target_link_libraries(particle_dynamics PRIVATE TBB::tbb)
 #target_link_libraries(system_test PRIVATE TBB::tbb)
-#target_link_libraries(rotational_system_test PRIVATE TBB::tbb)
+target_link_libraries(rotational_system_test PRIVATE TBB::tbb)
 target_link_libraries(oscillator_test PRIVATE TBB::tbb)
 target_link_libraries(particle_dynamics_test PRIVATE TBB::tbb)
 #target_link_libraries(integrators matplot)
