--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,6 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
-      - run: sudo apt install libtbb-dev
+      - run: sudo apt install libtbb2-dev
       - name: Run unit tests
         uses: HorstBaerbel/action-ctest@1.1
