--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,6 @@ jobs:
         with:
           submodules: recursive
       - run: sudo apt install libtbb2-dev
-          | dpkg -L libtbb2-dev
+      - run: dpkg -L libtbb2-dev
       - name: Run unit tests
         uses: HorstBaerbel/action-ctest@1.1
