Updated the workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,5 +16,6 @@ jobs:
           submodules: recursive
       - run: sudo apt install libtbb2-dev
       - run: ls /usr/lib/x86_64-linux-gnu/cmake/TBB
-      - name: Run unit tests
-        uses: HorstBaerbel/action-ctest@1.1
+      - run: cmake -DTBB_DIR=/usr/lib/x86_64-linux-gnu/cmake/TBB .
+      - run: cmake --build .
+      - run: ctest
