Updated the workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,4 +29,4 @@ jobs:
           submodules: recursive
       - run: cmake .
       - run: cmake --build .
-      - run: ctest
+      - run: ctest -C Debug
