--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,17 @@ jobs:
       - run: cmake --build .
       - run: ctest
 
+  checkout-and-ctest-macos:
+    runs-on: macos-latest
+
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: recursive
+      - run: cmake .
+      - run: cmake --build .
+      - run: ctest
+
   checkout-and-ctest-windows:
     runs-on: windows-latest
 
