Fixed the error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,9 +27,9 @@ include_directories(include)
 #add_executable(integrators main.cpp)
 #add_executable(particle_dynamics test/particle_dynamics.cpp test/write_vtk.cpp test/compute_energy.cpp)
 #add_executable(system_test test/system_test.cpp test/write_vtk.cpp test/compute_energy.cpp)
-add_executable(rotational_system_test test/rotational_system_test.cpp test/write_vtk.cpp ../soot-indentation/energy/compute_energy.cpp)
+add_executable(rotational_system_test test/rotational_system_test.cpp test/write_vtk.cpp test/compute_energy.cpp)
 add_executable(oscillator_test test/oscillator.cpp)
-add_executable(particle_dynamics_test test/particle_dynamics.cpp test/write_vtk.cpp ../soot-indentation/energy/compute_energy.cpp)
+add_executable(particle_dynamics_test test/particle_dynamics.cpp test/write_vtk.cpp test/compute_energy.cpp)
 
 if (${CMAKE_COMPILER_IS_GNUCXX})
     #target_link_libraries(particle_dynamics PRIVATE TBB::tbb)
